# Hierarchical-Attention-Network

./: .gitignore  HAN.py  dataset.py  pyproject.toml  result.html  train.py  utils.py
model/: word_attention.py
